Removed ? from data

--- a/UCIAdultDatasetAnalysis.ipynb
+++ b/UCIAdultDatasetAnalysis.ipynb
@@ -94,7 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = X.replace('?', np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +114,6 @@
        "Self-emp-not-inc     3862\n",
        "Local-gov            3136\n",
        "State-gov            1981\n",
-       "?                    1836\n",
        "Self-emp-inc         1695\n",
        "Federal-gov          1432\n",
        "Without-pay            21\n",
@@ -113,18 +121,18 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X[\"workclass\"].value_counts()"
+    "X['workclass'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +148,6 @@
        "Machine-op-inspct    3022\n",
        "Transport-moving     2355\n",
        "Handlers-cleaners    2072\n",
-       "?                    1843\n",
        "Farming-fishing      1490\n",
        "Tech-support         1446\n",
        "Protective-serv       983\n",
@@ -149,18 +156,18 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X[\"occupation\"].value_counts()"
+    "X['occupation'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +176,6 @@
        "native-country\n",
        "United-States                 43832\n",
        "Mexico                          951\n",
-       "?                               583\n",
        "Philippines                     295\n",
        "Germany                         206\n",
        "Puerto-Rico                     184\n",
@@ -212,13 +218,13 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X[\"native-country\"].value_counts()"
+    "X['native-country'].value_counts()"
    ]
   }
  ],
