A bit of basic analysis

--- a/UCIAdultDatasetAnalysis.ipynb
+++ b/UCIAdultDatasetAnalysis.ipynb
@@ -19,19 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sklearn as sk\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -94,137 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = X.replace('?', np.nan)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "workclass\n",
-       "Private             33906\n",
-       "Self-emp-not-inc     3862\n",
-       "Local-gov            3136\n",
-       "State-gov            1981\n",
-       "Self-emp-inc         1695\n",
-       "Federal-gov          1432\n",
-       "Without-pay            21\n",
-       "Never-worked           10\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X['workclass'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "occupation\n",
-       "Prof-specialty       6172\n",
-       "Craft-repair         6112\n",
-       "Exec-managerial      6086\n",
-       "Adm-clerical         5611\n",
-       "Sales                5504\n",
-       "Other-service        4923\n",
-       "Machine-op-inspct    3022\n",
-       "Transport-moving     2355\n",
-       "Handlers-cleaners    2072\n",
-       "Farming-fishing      1490\n",
-       "Tech-support         1446\n",
-       "Protective-serv       983\n",
-       "Priv-house-serv       242\n",
-       "Armed-Forces           15\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X['occupation'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "native-country\n",
-       "United-States                 43832\n",
-       "Mexico                          951\n",
-       "Philippines                     295\n",
-       "Germany                         206\n",
-       "Puerto-Rico                     184\n",
-       "Canada                          182\n",
-       "El-Salvador                     155\n",
-       "India                           151\n",
-       "Cuba                            138\n",
-       "England                         127\n",
-       "China                           122\n",
-       "South                           115\n",
-       "Jamaica                         106\n",
-       "Italy                           105\n",
-       "Dominican-Republic              103\n",
-       "Japan                            92\n",
-       "Guatemala                        88\n",
-       "Poland                           87\n",
-       "Vietnam                          86\n",
-       "Columbia                         85\n",
-       "Haiti                            75\n",
-       "Portugal                         67\n",
-       "Taiwan                           65\n",
-       "Iran                             59\n",
-       "Greece                           49\n",
-       "Nicaragua                        49\n",
-       "Peru                             46\n",
-       "Ecuador                          45\n",
-       "France                           38\n",
-       "Ireland                          37\n",
-       "Hong                             30\n",
-       "Thailand                         30\n",
-       "Cambodia                         28\n",
-       "Trinadad&Tobago                  27\n",
-       "Laos                             23\n",
-       "Yugoslavia                       23\n",
-       "Outlying-US(Guam-USVI-etc)       23\n",
-       "Scotland                         21\n",
-       "Honduras                         20\n",
-       "Hungary                          19\n",
-       "Holand-Netherlands                1\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X['native-country'].value_counts()"
+    "X = X.replace('?', np.nan)\n",
+    "y = y.replace('<=50K.', '<=50K')\n",
+    "y = y.replace('>50K.', '>50K')"
    ]
   },
   {
@@ -233,39 +110,164 @@
    "source": [
     "Now that the '?' have been replaced by the numpy module's NaN, the data is cleaner than it was before, and this makes it much easier to search for the missing values (more relevant when missing data presents itself in a mulititude of ways) and allows for a bit of compatibility with numpy in general. \n",
     "\n",
-    "There is an argument to be made that this is unncessary which has some validity to it, but the compatability with numpy (since Nan is a numpy type) can be useful if you want to use an methods from that module."
+    "There is an argument to be made that this is unncessary which has some validity to it, but the compatability with numpy (since Nan is a numpy type) can be useful if you want to use an methods from that module.\n",
+    "\n",
+    "Also, for whatever reason, there was some nonuniformity in the targets, so that needed to be fixed as well."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z = X.join(y) # joint data frame"
+    "yInt = y.replace('<=50K', 0)\n",
+    "yInt = yInt.replace('>50K', 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: 'State-gov'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mZ\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcorr\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\Shmar\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\frame.py:10704\u001b[0m, in \u001b[0;36mDataFrame.corr\u001b[1;34m(self, method, min_periods, numeric_only)\u001b[0m\n\u001b[0;32m  10702\u001b[0m cols \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mcolumns\n\u001b[0;32m  10703\u001b[0m idx \u001b[38;5;241m=\u001b[39m cols\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m> 10704\u001b[0m mat \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_numpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mna_value\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnan\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m  10706\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m method \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpearson\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m  10707\u001b[0m     correl \u001b[38;5;241m=\u001b[39m libalgos\u001b[38;5;241m.\u001b[39mnancorr(mat, minp\u001b[38;5;241m=\u001b[39mmin_periods)\n",
-      "File \u001b[1;32mc:\\Users\\Shmar\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\frame.py:1889\u001b[0m, in \u001b[0;36mDataFrame.to_numpy\u001b[1;34m(self, dtype, copy, na_value)\u001b[0m\n\u001b[0;32m   1887\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   1888\u001b[0m     dtype \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mdtype(dtype)\n\u001b[1;32m-> 1889\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_mgr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mas_array\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mna_value\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mna_value\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1890\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m result\u001b[38;5;241m.\u001b[39mdtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m dtype:\n\u001b[0;32m   1891\u001b[0m     result \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(result, dtype\u001b[38;5;241m=\u001b[39mdtype, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "File \u001b[1;32mc:\\Users\\Shmar\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\internals\\managers.py:1656\u001b[0m, in \u001b[0;36mBlockManager.as_array\u001b[1;34m(self, dtype, copy, na_value)\u001b[0m\n\u001b[0;32m   1654\u001b[0m         arr\u001b[38;5;241m.\u001b[39mflags\u001b[38;5;241m.\u001b[39mwriteable \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m   1655\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1656\u001b[0m     arr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_interleave\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mna_value\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mna_value\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1657\u001b[0m     \u001b[38;5;66;03m# The underlying data was copied within _interleave, so no need\u001b[39;00m\n\u001b[0;32m   1658\u001b[0m     \u001b[38;5;66;03m# to further copy if copy=True or setting na_value\u001b[39;00m\n\u001b[0;32m   1660\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m na_value \u001b[38;5;129;01mis\u001b[39;00m lib\u001b[38;5;241m.\u001b[39mno_default:\n",
-      "File \u001b[1;32mc:\\Users\\Shmar\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\internals\\managers.py:1715\u001b[0m, in \u001b[0;36mBlockManager._interleave\u001b[1;34m(self, dtype, na_value)\u001b[0m\n\u001b[0;32m   1713\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1714\u001b[0m         arr \u001b[38;5;241m=\u001b[39m blk\u001b[38;5;241m.\u001b[39mget_values(dtype)\n\u001b[1;32m-> 1715\u001b[0m     \u001b[43mresult\u001b[49m\u001b[43m[\u001b[49m\u001b[43mrl\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindexer\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m arr\n\u001b[0;32m   1716\u001b[0m     itemmask[rl\u001b[38;5;241m.\u001b[39mindexer] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m   1718\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m itemmask\u001b[38;5;241m.\u001b[39mall():\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: 'State-gov'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>fnlwgt</th>\n",
+       "      <th>education-num</th>\n",
+       "      <th>capital-gain</th>\n",
+       "      <th>capital-loss</th>\n",
+       "      <th>hours-per-week</th>\n",
+       "      <th>income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.076628</td>\n",
+       "      <td>0.030940</td>\n",
+       "      <td>0.077229</td>\n",
+       "      <td>0.056944</td>\n",
+       "      <td>0.071558</td>\n",
+       "      <td>0.230369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fnlwgt</th>\n",
+       "      <td>-0.076628</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.038761</td>\n",
+       "      <td>-0.003706</td>\n",
+       "      <td>-0.004366</td>\n",
+       "      <td>-0.013519</td>\n",
+       "      <td>-0.006339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>education-num</th>\n",
+       "      <td>0.030940</td>\n",
+       "      <td>-0.038761</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.125146</td>\n",
+       "      <td>0.080972</td>\n",
+       "      <td>0.143689</td>\n",
+       "      <td>0.332613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>capital-gain</th>\n",
+       "      <td>0.077229</td>\n",
+       "      <td>-0.003706</td>\n",
+       "      <td>0.125146</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.031441</td>\n",
+       "      <td>0.082157</td>\n",
+       "      <td>0.223013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>capital-loss</th>\n",
+       "      <td>0.056944</td>\n",
+       "      <td>-0.004366</td>\n",
+       "      <td>0.080972</td>\n",
+       "      <td>-0.031441</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.054467</td>\n",
+       "      <td>0.147554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hours-per-week</th>\n",
+       "      <td>0.071558</td>\n",
+       "      <td>-0.013519</td>\n",
+       "      <td>0.143689</td>\n",
+       "      <td>0.082157</td>\n",
+       "      <td>0.054467</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.227687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>income</th>\n",
+       "      <td>0.230369</td>\n",
+       "      <td>-0.006339</td>\n",
+       "      <td>0.332613</td>\n",
+       "      <td>0.223013</td>\n",
+       "      <td>0.147554</td>\n",
+       "      <td>0.227687</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     age    fnlwgt  education-num  capital-gain  capital-loss  \\\n",
+       "age             1.000000 -0.076628       0.030940      0.077229      0.056944   \n",
+       "fnlwgt         -0.076628  1.000000      -0.038761     -0.003706     -0.004366   \n",
+       "education-num   0.030940 -0.038761       1.000000      0.125146      0.080972   \n",
+       "capital-gain    0.077229 -0.003706       0.125146      1.000000     -0.031441   \n",
+       "capital-loss    0.056944 -0.004366       0.080972     -0.031441      1.000000   \n",
+       "hours-per-week  0.071558 -0.013519       0.143689      0.082157      0.054467   \n",
+       "income          0.230369 -0.006339       0.332613      0.223013      0.147554   \n",
+       "\n",
+       "                hours-per-week    income  \n",
+       "age                   0.071558  0.230369  \n",
+       "fnlwgt               -0.013519 -0.006339  \n",
+       "education-num         0.143689  0.332613  \n",
+       "capital-gain          0.082157  0.223013  \n",
+       "capital-loss          0.054467  0.147554  \n",
+       "hours-per-week        1.000000  0.227687  \n",
+       "income                0.227687  1.000000  "
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "JointInt = X.join(yInt)\n",
+    "JointInt.corr(numeric_only=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -273,9 +275,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "|"
-   ]
+   "source": []
   }
  ],
  "metadata": {
