Restructuring of the Markdown and Code

--- a/UCIAdultDatasetAnalysis.ipynb
+++ b/UCIAdultDatasetAnalysis.ipynb
@@ -10,11 +10,17 @@
     "\n",
     "# Goal and Introduction\n",
     "\n",
-    "The goal is to use this dataset to try to predict if someone makes over 50,000 dollar a year using a variety of variables such as occupation, age, education. \n",
+    "The goal is to use this dataset to try to predict if someone makes over 50,000 dollar a year using a variety of variables such as occupation, age, education. There is a mix of categorial and integer types which provides a variety of ways to probe and analyze the data. Additionally, the sheer amount of variables also adds to the possible avenues for analysis.\n",
     "\n",
     "Since this is a binary classification problem ( someone either makes more or less than/ equal to 50,000 dollars), there are a handful of possible alogrithms such as k-Nearest Neighbors, Logistic Regression, and Decision Trees. \n",
     "\n",
-    "The page on UCI's Machine Learning Repository states that there are missing values, so the data will need to be examined, and cleaned. Then a prelimary data exploration will be undertaken, and finally an algorithm will be trained using 85% of the data and then tested on 15% of the dataset. "
+    "## General Outline\n",
+    "\n",
+    "* Fix the missing values ( and change the targets to be integers)\n",
+    "* Prod the data using some basic statistics like correlations, and the describe method\n",
+    "* Discuss what could be uncovered with this preliminary analysis and what isn't really known\n",
+    "* Pick a ML model that works well for binary classification and implement it\n",
+    "* Discuss the Results"
    ]
   },
   {
@@ -32,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -94,8 +100,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1: Data Cleaning\n",
+    "\n",
+    "There isn't that much cleaning to do. The page on UCI's archive does say there are missing values so those will be converted to *Numpy's* **Nan** type for the sake of compatibility. This is marginally beneficial especially since missing values were only represented by question marks. \n",
+    "\n",
+    "There is the additional problem that the targets have not 2, but 4 different variables represented. \n",
+    "\n",
+    "*workclass* will be used as the example variable to show the change in the missing values."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "workclass\n",
+       "Private             33906\n",
+       "Self-emp-not-inc     3862\n",
+       "Local-gov            3136\n",
+       "State-gov            1981\n",
+       "?                    1836\n",
+       "Self-emp-inc         1695\n",
+       "Federal-gov          1432\n",
+       "Without-pay            21\n",
+       "Never-worked           10\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X['workclass'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "income\n",
+       "<=50K     24720\n",
+       "<=50K.    12435\n",
+       ">50K       7841\n",
+       ">50K.      3846\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,14 +179,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "workclass\n",
+       "Private             33906\n",
+       "Self-emp-not-inc     3862\n",
+       "Local-gov            3136\n",
+       "State-gov            1981\n",
+       "Self-emp-inc         1695\n",
+       "Federal-gov          1432\n",
+       "Without-pay            21\n",
+       "Never-worked           10\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X['workclass'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "income\n",
+       "<=50K     37155\n",
+       ">50K      11687\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that the '?' have been replaced by the numpy module's NaN, the data is cleaner than it was before, and this makes it much easier to search for the missing values (more relevant when missing data presents itself in a mulititude of ways) and allows for a bit of compatibility with numpy in general. \n",
+    "## Step 2: Preliminary Analysis\n",
     "\n",
-    "There is an argument to be made that this is unncessary which has some validity to it, but the compatability with numpy (since Nan is a numpy type) can be useful if you want to use an methods from that module.\n",
+    "A nice first step would be to see how each variable is distributed. Normal distributions tend to be better for Machine Learning models, but \n",
     "\n",
-    "Also, for whatever reason, there was some nonuniformity in the targets, so that needed to be fixed as well."
+    "The target varaible should be converted to an integer so it can be used with the **corr** method. This will give some simple insight into how the data is connected, though it should be noted that it gives no insight into categorical variables like *occupation*."
    ]
   },
   {
@@ -264,11 +390,6 @@
     "JointInt = X.join(yInt)\n",
     "JointInt.corr(numeric_only=True)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
