--- a/UCIAdultDatasetAnalysis.ipynb
+++ b/UCIAdultDatasetAnalysis.ipynb
@@ -17,28 +17,26 @@
     "## General Outline\n",
     "\n",
     "* Fix the missing values ( and change the targets to be integers)\n",
-    "* Prod the data using some basic statistics like correlations, and the describe method\n",
-    "* Discuss what could be uncovered with this preliminary analysis and what isn't really known\n",
+    "* Prod the data using some basic statistics like correlations, and some graphing\n",
     "* Pick a ML model that works well for binary classification and implement it\n",
     "* Discuss the Results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sklearn as sk\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sb"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +131,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +156,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +196,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +219,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,24 +234,23 @@
    "source": [
     "## Step 2: Preliminary Analysis\n",
     "\n",
-    "A nice first step would be to see how each variable is distributed. Normal distributions tend to be better for Machine Learning models, but \n",
+    "A nice first step would be to see how each variable is distributed. Normal distributions tend to be better for Machine Learning models, but it should be fine regardless. \n",
     "\n",
-    "The target varaible should be converted to an integer so it can be used with the **corr** method. This will give some simple insight into how the data is connected, though it should be noted that it gives no insight into categorical variables like *occupation*."
+    "The target varaible should be converted to an integer so it can be used with the **corr** method. This will give some simple insight into how the data is connected, though it should be noted that it gives no insight into categorical variables like *occupation*.\n",
+    "\n",
+    "After this, it will be time to pick a model and implement it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "yInt = y.replace('<=50K', 0)\n",
-    "yInt = yInt.replace('>50K', 1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -381,12 +378,14 @@
        "income                0.227687  1.000000  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "yInt = y.replace('<=50K', 0)\n",
+    "yInt = yInt.replace('>50K', 1)\n",
     "JointInt = X.join(yInt)\n",
     "JointInt.corr(numeric_only=True)"
    ]
