--- a/UCIAdultDatasetAnalysis.ipynb
+++ b/UCIAdultDatasetAnalysis.ipynb
@@ -24,19 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import sklearn as sk\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import random as rand"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "income                0.227687  1.000000  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
