--- a/UCIAdultDatasetAnalysis.ipynb
+++ b/UCIAdultDatasetAnalysis.ipynb
@@ -536,6 +536,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Notes on the Analysis\n",
+    "\n",
+    "The distributions are not normal, but there are some trends amongst the data. Many of the variables have a distribution that is biased towards one side. For example,*age* is clustered around the 20 to 50 years old range. Otherwise the numerical variables have a few modes that data clusters around. For example, education has three modes:at around 8,10, and 12, but maybe have one value that is incredibly prevalent and the other values are uncommon. For example, *native country* has a mode of the United States and every other country is much less common.*Relationship* and *occupation* is a bit more of a gradual descent from the most popular to the least popular. \n",
+    "\n",
+    "What this shows us is that some clusters do exist, and outliers do occur. *Capital Gains* and *Capital Losses* are effectively all 0 except for a few far away from 0, for example. Certain models that are susceptible to outliers, such as Random Forest, may not work well. Additionally, since there is a large quantitity of data, there is a good argument to be made to use A tree-based model like the aforementioned Random Forest, over linear regression. \n",
+    "\n",
+    "With this in mind, *XGBoost* is a good model to use. It work well on dense datasets (Capital Gains and Losses are sparse but it should be fine), and is generally fine with outliers. This is also a good option since the UCI page lists it as the most precise and second most accurate model for this particular dataset. Other potential options like Random Forest and Support Vector are also accurate and precise and are in the same sort of bucket as xgboost. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
