--- a/UCIAdultDatasetAnalysis.ipynb
+++ b/UCIAdultDatasetAnalysis.ipynb
@@ -31,7 +31,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import random as rand"
+    "import sklearn as sk\n",
+    "import xgboost as xgb"
    ]
   },
   {
